style-fix : overflow y for messages

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
 .message-container {
   max-height: 60%;
   height: 60%;
-  overflow-y: scroll;
+
   padding: 0.5rem;
   display: flex;
   justify-content: end;
@@ -52,8 +52,9 @@ body {
   display: flex;
   flex-direction: column;
   padding: 0;
-  height: fit-content;
-
+  height: 100%;
+  padding: 1rem;
+  overflow-y: scroll;
   gap: 1rem;
   width: 300px;
 }
